Fix Resource Examples overflowing past their code fences
Previously, Resource Examples could extend past their code fences,
which made the site look weird. I have setup our `code` blocks to
use `overflow: auto`, which puts scrollbars in the code blocks and
prevents the examples from extending past their code fence.

--- a/content/stylesheet.css
+++ b/content/stylesheet.css
@@ -205,6 +205,7 @@ pre > code {
   border-radius: 5px;
   border: 2px solid #eaeaea;
   background: #f9f9f9;
+  overflow: auto;
 }
 pre > code.sh {
   background: #feeeee;
